# pennylane-lightning-kokkos

./: .gitignore  .readthedocs.yml  CMakeLists.txt  Makefile  README.rst  install.py  requirements.txt  setup.py
.github/: CHANGELOG.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/workflows/: compat-check-latest-latest.yml  compat-check-latest-stable.yml  compat-check-stable-latest.yml  compat-check-stable-stable.yml  format.yml  post_release_tag.yml  set_amd_wheel_build_matrix.yml  set_wheel_build_matrix.yml  test_self_hosted.yml  tests_linux.yml  tests_linux_x86_nvidia_gpu.yml  tests_macos.yml  tests_windows.yml  wheel_linux_x86_64.yml  wheel_macos_arm64.yml  wheel_macos_x86_64.yml  wheel_roc_x86_64.yml
doc/: conf.py  devices.rst  index.rst  requirements.txt
doc/code/: __init__.rst
docker/: auditwheel
pennylane_lightning_kokkos/: __init__.py  _serialize.py  _version.py  lightning_kokkos.py
pennylane_lightning_kokkos/src/: CMakeLists.txt
pennylane_lightning_kokkos/src/algorithms/: AdjointDiffKokkos.cpp  AdjointDiffKokkos.hpp  CMakeLists.txt  MeasuresFunctors.hpp  MeasuresKokkos.cpp  MeasuresKokkos.hpp  ObservablesKokkos.hpp
pennylane_lightning_kokkos/src/bindings/: Bindings.cpp  Bindings.hpp
pennylane_lightning_kokkos/src/simulator/: CMakeLists.txt  ExpValFunctors.hpp  GateFunctors.hpp  GatesHost.hpp  MeasuresFunctors.hpp  MeasuresKokkos.cpp  MeasuresKokkos.hpp  ObservablesKokkos.hpp  StateVectorKokkos.cpp  StateVectorKokkos.hpp
pennylane_lightning_kokkos/src/tests/: CMakeLists.txt  TestHelpers.hpp  Test_AdjointDiffKokkos.cpp  Test_Backend_info.cpp  Test_LinearAlgebra.cpp  Test_StateVectorKokkos_Expval.cpp  Test_StateVectorKokkos_Generator.cpp  Test_StateVectorKokkos_Measure.cpp  Test_StateVectorKokkos_NonParam.cpp  Test_StateVectorKokkos_Param.cpp  Test_StateVectorKokkos_Var.cpp  runner_main.cpp
pennylane_lightning_kokkos/src/util/: CMakeLists.txt  Error.hpp  GetConfigInfo.hpp  KokkosUtil.hpp  LinearAlgebra.hpp  LinearAlgebraKokkos.hpp  Util.hpp  UtilKokkos.hpp
tests/: benchmark_gradient.py  conftest.py  run_tests.sh  scaling_plot.py  test_adjoint_jacobian.py  test_apply.py  test_decomposition.py  test_execute.py  test_expval.py  test_gates.py  test_gradient.py  test_hamiltonian.py  test_hamiltonian_sparse.py  test_initstate.py  test_kokkos.py  test_kokkos_utils.py  test_probs.py  test_sample.py  test_vjp.py
